--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laraapp_db
+DB_DATABASE=webshop_db
 DB_USERNAME=root
 DB_PASSWORD=wp
 
