Resize uploaded photos

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.4",
         "http-interop/http-factory-guzzle": "^1.0",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.64",
         "laravel/scout": "^9.3",
         "laravel/socialite": "^5.2",
