Added basic cart function

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravolt/avatar": "^4.1",
         "league/flysystem-aws-s3-v3": "^1.0",
         "meilisearch/meilisearch-php": "^0.19.2",
+        "melihovv/laravel-shopping-cart": "^7.0",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
