Send email via mailgun(production)

--- a/.env
+++ b/.env
@@ -27,13 +27,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=6db92c3ca88812
-MAIL_PASSWORD=78531e94e07974
+MAIL_MAILER=mailgun
+MAIL_HOST=
+MAIL_PORT=587
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
 MAIL_ENCRYPTION=tls
-MAIL_FROM_NAME="${APP_NAME}"
+MAILGUN_DOMAIN=icnav.online
+MAILGUN_SECRET=key-e340ef9e1307ec0e16da4e3b6cc9cd36
+MAIL_FROM_ADDRESS=krzysztof.picur@gmail.com
+MAIL_FROM_NAME=BasePC
 
 AWS_ACCESS_KEY_ID=AKIA6QKMNR7JSEFUMQBL
 AWS_SECRET_ACCESS_KEY=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
